WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64759
DFG JIT does not optimize strict equality as effectively as the old JIT does
https://bugs.webkit.org/show_bug.cgi?id=64759
Summary
DFG JIT does not optimize strict equality as effectively as the old JIT does
Filip Pizlo
Reported
2011-07-18 15:13:36 PDT
The old JSC JIT optimizes strict equality (===) by having a fast path for when one operand is not a cell, and neither operand is a number. The DFG JIT only has fast-path optimizations for strict equality that speculate that both operands are integers. The DFG JIT should have similar optimizations to the old JIT for strict equality.
Attachments
the patch
(12.00 KB, patch)
2011-07-18 15:18 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-18 15:18:54 PDT
Created
attachment 101218
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-18 17:36:50 PDT
Comment on
attachment 101218
[details]
the patch Clearing flags on attachment: 101218 Committed
r91226
: <
http://trac.webkit.org/changeset/91226
>
WebKit Review Bot
Comment 3
2011-07-18 17:36:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug